# Mobile-Document-Scanner-CppBind-example

./: .gitignore  CMakeLists.txt  README.md  cppbind.yaml  cv.yaml  modulemap.cppbind.yaml
apps/: CMakeLists.txt
apps/android/: README.md  gradle.properties  settings.gradle
apps/android/app/: build.gradle
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/res/layout/: activity_main.xml
apps/android/app/src/main/res/values/: strings.xml  themes.xml
apps/android/app/src/main/res/values-night/: themes.xml
apps/android/gradle/wrapper/: gradle-wrapper.properties
apps/document_scanner_app/: CMakeLists.txt  main.cpp
apps/ios/: README.md
apps/ios/DocumentScanner/DocumentScanner/: CameraView.swift  ContentView.swift  DocumentScannerApp.swift  ImageUtils.swift
apps/ios/DocumentScanner/DocumentScanner.xcodeproj/: project.pbxproj
apps/kotlin/: main.kt
apps/python/: main.py
apps/swift/: main.swift
document_scanner/: CMakeLists.txt
document_scanner/api/: CMakeLists.txt
document_scanner/api/android/: CMakeLists.txt  settings.gradle
document_scanner/api/android/docscanner/: build.gradle
document_scanner/api/android/docscanner/src/main/: AndroidManifest.xml
document_scanner/api/android/docscanner/src/main/cpp/: CMakeLists.txt
document_scanner/api/android/docscanner/src/main/cpp/jni/cppbind/exception_helpers/: std_exc_classes.cpp
document_scanner/api/android/docscanner/src/main/cpp/jni/cv/: imgcodecs.cpp  mat.cpp  types.cpp
document_scanner/api/android/docscanner/src/main/cpp/jni/doc_scanner/: document_scanner_cv.cpp
document_scanner/api/android/gradle/wrapper/: gradle-wrapper.properties
document_scanner/api/ios/DocumentScannerFramework/: .gitignore  docScanner.modulemap
document_scanner/api/ios/DocumentScannerFramework/DocumentScannerFramework/: DocumentScannerFramework.h
document_scanner/api/ios/DocumentScannerFramework/DocumentScannerFramework.xcodeproj/: project.pbxproj
document_scanner/api/ios/DocumentScannerFramework/DocumentScannerFramework/Cpp/cv/: c_imgcodecs.cpp  (+5 more)
document_scanner/api/python/: CMakeLists.txt
document_scanner/document_scanner_lib/: CMakeLists.txt  document_scanner_cv.cpp
(+17 files in other folders)
